.. Author notes: this file is formatted with restructured text
(http://docutils.sourceforge.net/docs/user/rst/quickstart.html).
The changelog style is adapted from Apache Lucene.

Note that ``RB_ID=#`` correspond to associated messages in commits.

Next Version

API Changes:

  * util-core: `com.twitter.util.NonFatal` is deprecated, use
    `scala.util.control.NonFatal` instead. ``RB_ID=892475``

6.39.0  2016-11-22

No Changes
==========

6.38.0  2016-10-10

New Features:

  * util-app: Java developers can now declare instances of `GlobalFlag`
    from Java. See `c.t.app.JavaGlobalFlag` for details. ``RB_ID=874073``

  * util-thrift: We now depend on a fork of libthrift hosted in the Central Repository.
    The new package lives in the 'com.twitter' organization. This removes the necessity of
    depending on maven.twttr.com. This also means that eviction will not be automatic and
    using a newer libthrift library requires manual eviction if artifacts are being pulled
    in transitively. ``RB_ID=885879``

  * util-logging: Allow users to override `c.t.util.logging.Logger` installation,
    making it easier to work with SLF4J bridges. ``RB_ID=870684``

  * util: No longer need to add an additional resolver that points to maven.twttr.com.
    ``RB_ID=878967``

Bug Fixes:

  * util-core: `c.t.io.InputStreamReader` and `Readers` created by
    `c.t.io.Reader.fromFile` and `fromStream` now close the underlying
    `InputStream` on reading of EOF and on calls to `Reader.discard`.
    ``RB_ID=873319``

API Changes:

  * util-core: `c.t.app.GlobalFlag` is now `abstract` to reflect how the class
    is intended to be used. ``RB_ID=875409``


6.37.0  2016-09-07

New Features:

  * util-app: Introduce `c.t.app.Flag.letClear` allowing flags to be unset.
    ``RB_ID=868177``

6.36.0  2016-08-25

New Features:

  * util-core: `c.t.util.FuturePool` now optionally exposes metrics on
    their internal state such as active tasks, and completed tasks.
    ``RB_ID=850652``
